--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,13 +9,13 @@
   --color-tertiaty: #99a0a3;
 }
 
-a { 
+/* a { 
   @apply text-red-700;
 }
 
 a:hover {
   @apply border-b-2 border-red-700;
-}
+} */
 
 
 
@@ -95,4 +95,20 @@ a:hover {
   100% {
     opacity: 0;
   }
+}
+
+/* scrollbar */
+.customScrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.customScrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(36, 36, 36, 0.3);
+  border-radius: 2px;
+  margin: 10px 0px;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 0 6px rgba(96, 96, 96, 0.5);
 }
