--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,14 +17,16 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.homepageGradient{
-  background: linear-gradient(85.28deg, #303C4A 4.09%, #000000 98%);
+.homepageGradient {
+  background-image: url("/assets/images/hero.png");
+  background-size: 100% 100%;
 }
 
-.workSansFont{
+.workSansFont {
   font-family: 'Work Sans', sans-serif;
 }
-.gradientText1{
+
+.gradientText1 {
   background: linear-gradient(180deg, #000000, #FFFFFF 75%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -49,10 +51,12 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 100%;
 }
+
 .lds-spinner div {
   transform-origin: 50% 50%;
   animation: lds-spinner 1.2s linear infinite;
 }
+
 .lds-spinner div:after {
   content: " ";
   display: block;
@@ -69,42 +73,52 @@ input::-webkit-inner-spin-button {
   border-radius: 30%;
   background: #cef;
 }
+
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -0.7s;
 }
+
 .lds-spinner div:nth-child(2) {
   transform: rotate(45deg);
   animation-delay: -0.6s;
 }
+
 .lds-spinner div:nth-child(3) {
   transform: rotate(90deg);
   animation-delay: -0.5s;
 }
+
 .lds-spinner div:nth-child(4) {
   transform: rotate(135deg);
   animation-delay: -0.4s;
 }
+
 .lds-spinner div:nth-child(5) {
   transform: rotate(180deg);
   animation-delay: -0.3s;
 }
+
 .lds-spinner div:nth-child(6) {
   transform: rotate(225deg);
   animation-delay: -0.2s;
 }
+
 .lds-spinner div:nth-child(7) {
   transform: rotate(270deg);
   animation-delay: -0.1s;
 }
+
 .lds-spinner div:nth-child(8) {
   transform: rotate(305deg);
   animation-delay: -0.1s;
 }
+
 @keyframes lds-spinner {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -128,11 +142,12 @@ input::-webkit-inner-spin-button {
 
 
 /* custom gradient bg */
-.customGradient{
+.customGradient {
   background: #121418;
   position: relative;
 }
-.customGradient::after{
+
+.customGradient::after {
   content: "";
   position: absolute;
   top: -1vh;
@@ -145,4 +160,9 @@ input::-webkit-inner-spin-button {
     radial-gradient(closest-side at 33.3%, #91A8ED 100%, transparent 0);
   filter: blur(15vh);
   opacity: .45;
+}
+
+.glass-table {
+  background: linear-gradient(286.5deg, rgba(255, 255, 255, 0.04) 25.86%, rgba(255, 255, 255, 0.02) 99.29%);
+  border-radius: 12px;
 }
